@@ -22,6 +22,7 @@ importFrom("corpcor","is.positive.definite","make.positive.definite")
 importFrom("Matrix","Matrix","t")
 importFrom("xts","xts","as.xts","is.xts","endpoints")
 importFrom("tsets","ets_modelspec")
+importFrom("tsvetsad","estimate_ad.tsvets.spec")
 importFrom(Rcpp,evalCpp)
 importFrom(Rcpp,loadModule)
 export("vets_modelspec")
